Fix overflow:hidden hides the bottom of tablet/mobile preview (#38019)

--- a/packages/edit-site/src/components/block-editor/style.scss
+++ b/packages/edit-site/src/components/block-editor/style.scss
@@ -24,6 +24,12 @@
 		.edit-site-visual-editor__editor-canvas {
 			border-radius: 2px;
 		}
+
+		// To hide the horizontal scrollbar and show the drag handle on the
+		// left and right of the container.
+		.components-resizable-box__container {
+			overflow: visible;
+		}
 	}
 }
 
@@ -46,6 +52,8 @@
 
 .components-resizable-box__container {
 	margin: 0 auto;
+	// Removing this will cancel the bottom margins in the iframe.
+	overflow: auto;
 }
 
 .resizable-editor__drag-handle {
